assets/sass/rennes-hugo/utils/_extend.sass
%grid-card
  color: $block-links-card-color
  background-color: $block-links-card-background
  border: 1px solid var(--color-border)
  border-radius: pxToRem(2)

  &:hover,
  &:hover a:not(.chip)
    color: $block-links-card-hover-color

  &:hover
    background-color: $block-links-card-hover-background

%grid-card-content
  padding: $spacing-3 $spacing-3 $spacing-5
  & + .media
    margin-bottom: 0

%grid-card-icon
  position: absolute
  right: $spacing-3
  bottom: $spacing-3

%icons-spacing
  display: flex
  align-items: center
  gap: pxToRem(4)

